# alpha_digest

./: .env.example  .gitignore  README.md  SETUP.md  examples.py  langgraph.json  main.py  pyproject.toml
src/alpha_digest/: __init__.py  config.py
src/alpha_digest/agent/: graph.py
src/alpha_digest/prompts/: prompts.py
src/alpha_digest/states/: state.py
src/alpha_digest/tests/: test_agent.py
src/alpha_digest/tools/: __init__.py  data_source.py
src/alpha_digest/utils/: __init__.py  credentials.py  email.py  telegram.py  tts.py
